# Hindsight

./: .gitignore  HARVESTER.md  LICENSE  README.md  config.example.json  config_stackoverflow.example.json  harvest.py  harvest_stackoverflow.py  harvest_status.py  pyproject.toml
.github/workflows/: ci.yml
skills/hindsight-contribute/: SKILL.md
skills/hindsight-debug/: SKILL.md
src/hindsight/: __init__.py  api.py  db.py  embedder.py  index.py  mcp_server.py  normalize.py  schema.py  search.py  submit.py
tests/: test_api.py  test_db.py  test_embedder.py  test_index.py  test_mcp_server.py  test_normalize.py  test_schema.py  test_search.py  test_smoke.py  test_submit.py
